--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -92,7 +92,7 @@
 
 %\preprint{APS/123-QED}
 
-\title{On the analytic structure of the linear response susceptibility in open systems}
+%\title{On the analytic structure of the linear response susceptibility in open systems}
 \title{Localization properties, observable character and computational reliability of the linear response in open systems}
 
 \author{Luigi Genovese}
@@ -131,7 +131,8 @@ We focus our attention to the linear response regime (LR) in which the theory ca
 as a quantum Liouville equation for the response density operator. Different computational approaches have been developed in literature \cite{baroni2008,hubener2014,brabec2015}, principally 
 with the aim of producing efficient algorithms for the evaluation of the physical observables. These methods differ both for the procedure adopted to solve the Liouville equation 
 (explicit diagonalization, self-consistent Sternheimer equation, Lanczos chain-like procedure, etc.) and both for the choice of the basis set employed to perform the calculations. 
-Nonetheless, in all the cases one is a dealing with a finite basis set that, unavoidably, gives rise to a limited computational domain. It is then meaningful to try to understand under 
+Nonetheless, in all the cases one is a dealing with a finite basis set that, unavoidably, gives rise to a limited computational domain. 
+It is then meaningful to try to understand under 
 which extent the computational-induced truncation of the natural open boundaries condition could produce observable effects on the physical quantities computed in the LR. 
 
 A preliminary understanding of this problem can be achieved thanks to the results reported in \cite{boffi2016}. The authors of this paper discuss the effects of a finite basis set on the 
@@ -155,27 +156,98 @@ and the analytic structure of the linear response susceptibility.
 % The same arguments cannot be rigidly extended to the case in which an external time-dependent field starts acting on the system. Indeed, the perturbation drives the system out 
 % from the equilibrium and the electrons sample a wider region of the state space, that will contains orbitals of both negative (bound) and positive (unbound) energies. 
 
-\section{Theory}
+%\section{Theory}
+\section{Localization properties of the linear response actors in open systems}
 
-We start by reviewing review the fundamental equations that govern the properties of an open quantum system in the linear response regime. We assume that our calculations are carried 
-out within a highly complete real-space basis set that provides a precise description of the system in a finite computational domain. The purpose of the analysis is to determine the 
-asymptotic behavior of the main building blocks of the LR in the long range. Then we discuss the relation between localization properties and dependence of the results of LR from the 
-specific choice of the basis set and, in particular, from the dimension of the computation  domain. 
+% We start by reviewing review the fundamental equations that govern the properties of an open quantum system in the linear response regime. We assume that our calculations are carried 
+% out within a highly complete real-space basis set that provides a precise description of the system in a finite computational domain. The purpose of the analysis is to determine the 
+% asymptotic behavior of the main building blocks of the LR in the long range. Then we discuss the relation between localization properties and dependence of the results of LR from the 
+% specific choice of the basis set and, in particular, from the dimension of the computation  domain. 
+% 
+% Linear response can be effectively applied to the analysis of the electronic excitations in molecular systems. In this framework one consider a system described by the Hamiltonian 
+% $\hnot$ and assume that the ground-state density $\dmnot$ has been provided. The linear response formalism allows us to evaluate the modification of the expectation value of a generic 
+% observable induced by a time-dependent perturbing field acting on the system. This quantity, written in the frequency domain, can be expressed through the evaluation of the 
+% \emph{linear response functional}
+% \be\lb{LinearResponseFunctDef1}
+% \braket{\delta\op O}(\omega) = \trace{\dm'(\omega)\op O} \;.
+% \ee
+% Here $\op O$ represents the observable\footnote{For a sake of concreteness, we are limiting our considerations to observables that do not explicitly depend on time} under inspection 
+% while the \emph{response density operator} $\dm'(\omega)$ describes the modification of the ground-state density induced by the perturbation. In the contest of the LR the response 
+% density satisfies an equation of motion written in the form of a quantum Liouville operator (for example see \cite{baroni2008}),
+% \be\lb{LiouvillianRhopomegaDef1}
+% \left(\omega - \Liouv\right) \dm'(\omega) =  \commutator{\op\Phi(\omega)}{\dmnot} \;,
+% \ee
+% where $\op\Phi(\omega)$ represents the perturbing field acting on the system. 
 
-Linear response can be effectively applied to the analysis of the electronic excitations in molecular systems. In this framework one consider a system described by the Hamiltonian 
-$\hnot$ and assume that the ground-state density $\dmnot$ has been provided. The linear response formalism allows us to evaluate the modification of the expectation value of a generic 
-observable induced by a time-dependent perturbing field acting on the system. This quantity, written in the frequency domain, can be expressed through the evaluation of the 
-\emph{linear response functional}
+In this section we review the fundamental equations that govern the linear response regime of molecular-like systems in vacuum. Due to their intrinsic nature, this class of systems is 
+characterized by a potential energy localized in a finite region around system's atoms and free boundary conditions proper of the open systems are adopted, so the wave function is in 
+principle free to explore the whole space.  
+
+Linear response can be effectively applied to the analysis of the electronic excitations in open systems. In this framework one consider the unperturbed Hamiltonian $\hnot$ and assume that 
+the ground-state density $\dmnot$ has been provided. The linear response formalism allows us to evaluate the modification of the expectation value of a generic observable induced by a 
+time-dependent perturbing field acting on the system. This quantity, written in the frequency domain, can be expressed through the evaluation of the \emph{linear response functional}
 \be\lb{LinearResponseFunctDef1}
 \braket{\delta\op O}(\omega) = \trace{\dm'(\omega)\op O} \;.
 \ee
 Here $\op O$ represents the observable\footnote{For a sake of concreteness, we are limiting our considerations to observables that do not explicitly depend on time} under inspection 
 while the \emph{response density operator} $\dm'(\omega)$ describes the modification of the ground-state density induced by the perturbation. In the contest of the LR the response 
-density satisfies an equation of motion written in the form of a quantum Liouville operator (for example see \cite{baroni2008}),
+density satisfies an equation of motion written in the form of a quantum Liouville operator (for example see \cite{baroni2008})
 \be\lb{LiouvillianRhopomegaDef1}
 \left(\omega - \Liouv\right) \dm'(\omega) =  \commutator{\op\Phi(\omega)}{\dmnot} \;,
 \ee
-where $\op\Phi(\omega)$ represents the perturbing field acting on the system. 
+where $\op\Phi(\omega)$ represents the perturbing field. 
+
+The purpose of the present analysis is to determine the asymptotic behavior of the main building blocks of the LR in the long range, \emph{i.e.} outside the support domain of the potential. 
+%Then we discuss the relation between localization properties and dependence of the results of LR from the specific choice of the basis set and, in particular, from the dimension of the computation domain. 
+
+%\subsection{Solution of the Schroedinger equation for open systems}
+\subsection{Long range behavior of the eigenvalue solution of the Schroedinger equation}
+\label{SEopenSystem}
+
+As a preliminary step for the forthcoming discussion we present a simple argument that allows us to determine the asymptotic character of the eigenvalue solution of the Schroedinger equation (SE) 
+$\op H\ket{\psi}=\eps\ket{\psi}$. The main aims of this analysis, apart from reproducing the well known behavior of the wave functions, is to introduce some tools and setting up notations and 
+terminology that will we widely used in the rest of the paper. 
+
+We procede by splitting the Hamiltonian as the sum of the kinetic $\op T$ and potential $\op V$ term. Since we are dealing with molecular-like systems $\op V$ has a compact support when projected in the 
+$\r$-representation. We can formally solve the SE as an inhomogeneous Helmholtz equation by writing
+\be\lb{SEHelmholtz1}
+\ket{\psi} = \op G_H(\eps)\ket{\op V\psi}\;,
+\ee
+where we have introduced the Green function of the Helmholtz operator $\op G_H(\eps) = (\eps-\op T)^{-1}$. We observe that, due to the properties of $\op V$, the \emph{source term} $\ket{\op V\psi}$ 
+of equation \eqref{SEHelmholtz1} is localized in space and, for open boundary conditions in three dimensions, the kernel of $\op G_H(\eps)$ in the coordinate representation reads: 
+\be\lb{HelmholtzKernelDef1}
+\bra{\r} \op G_H(\eps) \ket{\r'} = \frac{1}{4\pi} \begin{cases}
+\frac{e^{-\alpha|\r - \r' |}}{|\r- \r' |} \;,\; & {\textrm for}\; \eps  < 0\; \\ 
+\frac{e^{\ii \alpha |\r-\r' |}}{|\r-\r' |} \;, & {\textrm for} \; \eps \geq 0
+\end{cases} \;,
+\ee
+where $\alpha = \sqrt{2|\eps|}$. 
+This representation of the eigenvalues solution of the SE evidences that the value $\eps=0$ represents the threshold level that determines the asymptotic character of the wave functions. 
+Indeed, for $\eps > 0$,  $\op G_H(\eps)$ behaves as a spherical wave and its convolution with the source term  gives raise to a $\psi(\r)$ delocalized in the whole accessible space. Instead, 
+for values of $\eps < 0$, the kernel contains an exponential damping factor and the associated wave functions exhibit a bound-state behavior in the long range. Finally, we observe that the 
+square-integrability and the continuity of the wave function and its derivatives poses further constrains responsible for the discretization of the energy spectrum for bound-states.  
+
+The different asymptotic behavior of the wave functions has a deep impact on the possible computational induced error obtained when this quantities are evaluated using a (finite) computational
+setup. 
+A direct numerical evidence of this problem has been discussed in \cite{boffi2016}. The authors of this paper analyze the effects of a finite basis set on the 
+occupied and virtual orbitals of a molecular system and establish a clear correspondence between the orbital localization character, and the independence of its properties (\emph{e.g.} energy) 
+with respect to the basis set. It is shown that (localized) orbitals with a bound-state behavior in the long range constitute a genuine discrete set and a finite basis is 
+able to provide a reliable description of these states if the sampled domain contains their natural sizes. On the contrary, unbound (delocalized) orbitals form a continuum of states in the 
+true system with open boundaries. For these class of objects the presence of a finite computational domain has a deeper impact since introduces a fictitious discretization of the energy levels. 
+Furthermore, the energies of the unbound orbitals are not stable with respect to a change of the size of the computational domain and approach to zero as long as it is increased.  
+
+
+% It is then meaningful to try to understand under 
+% which extent the computational-induced truncation of the natural open boundaries condition could produce observable effects on the physical quantities computed in the LR. 
+% A preliminary understanding of this problem can be achieved thanks to the results reported in \cite{boffi2016}. The authors of this paper discuss the effects of a finite basis set on the 
+% occupied and virtual orbitals of a molecular system and establish a clear correspondence between the orbital localization character, and the independence of its properties (\emph{e.g.} energy) 
+% with respect to the basis set. It is shown that (localized) orbitals with a bound-state behavior in the long range constitute a genuine discrete set and a finite basis is 
+% able to provide a reliable description of these states if the sampled domain contains their natural sizes. On the contrary, unbound (delocalized) orbitals form a continuum of states in the 
+% true system with open boundaries. For these class of objects the presence of a finite computational domain has a deeper impact since introduces a fictitious discretization of the energy levels. 
+% Furthermore, the energies of the unbound orbitals are not stable with respect to a change of the size of the computational domain and approach to zero as long as it is increased.  
+
+
+
 
 \subsection{Fluctuation states. A localization argument for the response density}
 \label{FluctuationState}
@@ -185,7 +257,7 @@ occupied states, \emph{i.e} the subset of the bound eigenstates of $\hnot$ with 
 as $\eps_h$ and identify the value of the first ionization potential with $|\eps_h|$. In what follows we will assume that the set of states $\{\ket{\psi_p}\}$ are described by real 
 functions, when projected in the $\r$-representation.  
 
-The inspection of the linear order time evolution of the eigenstates of $\hnot$ evidence that the response density acts as a transitions operator, linking the occupied and empty subspaces 
+The inspection of the linear order time evolution of the eigenstates of $\hnot$ evidence that the response density acts as a transition operator, linking the occupied and empty subspaces 
 of $\hnot$, and satisfies the \emph{transverse} condition  
 \be\lb{RhopTransverseDef1}
 \dm' = \dm_{\perp} \doteq \dmnot\dm'\op Q_0 + \op Q_0\dm'\dmnot
@@ -203,31 +275,28 @@ written as a modified Sternheimer equations \cite{mahan1980}
 \ee
 and we observe that the first-order Hamiltonian contains, apart from the perturbing field, a further term $\op V'[\dm']$ due to the density-dependence of $\hnot$.
 
-The interesting aspect of these equations in the perspective of the present analysis is that they allow us to present a localization argument for the fluctuation 
-states. To clarify this statement we split the unperturbed Hamiltonian as the sum of the kinetic $\op T$ and potential $\op V$ term and solve \eqref{fluctuationStateEqMotion1} in the form 
-of a self-consistent inhomogeneous Helmholtz equation by writing:
+The interesting aspect of these equations in the perspective of the present analysis is that they allow us to present a localization argument for the fluctuation states using a procedure  
+analogous to the one depicted in section \ref{SEopenSystem}. So we split the unperturbed Hamiltonian as the sum of the kinetic $\op T$ and potential $\op V$ term and express the solution of 
+\eqref{fluctuationStateEqMotion1} in the form of a self-consistent inhomogeneous Helmholtz equation
 \be\lb{rhoPrimeFluctuationStateDef2}
 \ket{f_p(\omega)} = \op G_H(\omega+\epsilon_p)\ket{s(\omega)} \;,
 \ee
-where we have introduced the Green function of the Helmholtz operator $\op G_H(\omega) = (\omega-\op T)^{-1}$,
-and the \emph{source term} is given by:
+where in this case the source term contains further addend apart from the unperturbed potential and reads:
 \be
 \ket{s(\omega)} =  \op V\ket{f_p(\omega)} + \op Q_0(\op V'(\omega) + \op \Phi(\omega))\ket{\psi_p} \;.\nn
 \ee
-For open boundary conditions in three dimensions, the kernel of $\op G_H(\omega)$ in the coordinate representation reads: 
-\be\lb{HelmholtzKernelDef1}
-\bra{\r} \op G_H(\omega) \ket{\r'} = \frac{1}{4\pi} \begin{cases}
-\frac{e^{-\alpha|\r - \r' |}}{|\r- \r' |} \;,\; & {\textrm for}\; \omega  < 0\; \\ 
-\frac{e^{\ii \alpha |\r-\r' |}}{|\r-\r' |} \;, & {\textrm for} \; \omega \geq 0
-\end{cases} \;,
-\ee
-where $\alpha = \sqrt{2|\omega|}$. 
-
-The localization character of fluctuation states can be determined by looking at the long range behavior of \eqref{rhoPrimeFluctuationStateDef2}, projected in the $\r$-representation.
-An inspection of the structure of \eqref{HelmholtzKernelDef1} evidences that, for each value of $p$, there exist a threshold value $\omega = |\eps_p|$, which govern the localization 
-properties of the corresponding fluctuation state. Indeed, for $\omega > |\eps_p|$,  $\op G_H(\omega)$ behaves as a spherical wave and its convolution with the source term  gives 
-raise to a $f_p(\omega,\r)$ delocalized in the whole accessible space. On the contrary, for values of $\omega < |\eps_p|$, % below the threshold,
-the kernel contains an exponential damping factor and $f_p(\omega,\r)$ exhibit a bound-state behavior in the long range.   
+% For open boundary conditions in three dimensions, the kernel of $\op G_H(\omega)$ in the coordinate representation reads: 
+% \be\lb{HelmholtzKernelDef1}
+% \bra{\r} \op G_H(\omega) \ket{\r'} = \frac{1}{4\pi} \begin{cases}
+% \frac{e^{-\alpha|\r - \r' |}}{|\r- \r' |} \;,\; & {\textrm for}\; \omega  < 0\; \\ 
+% \frac{e^{\ii \alpha |\r-\r' |}}{|\r-\r' |} \;, & {\textrm for} \; \omega \geq 0
+% \end{cases} \;,
+% \ee
+% where $\alpha = \sqrt{2|\omega|}$. 
+The localization character of fluctuation states can be determined by looking at the long range behavior of \eqref{rhoPrimeFluctuationStateDef2}.
+In this case it emerges that, for each value of $p$, the value $\omega = |\eps_p|$ represents the threshold level that govern the localization properties of the corresponding 
+fluctuation state. Indeed, for $\omega > |\eps_p|$,  $\op G_H(\omega)$ acts as a spherical wave kernel and  gives raise to a $f_p(\omega,\r)$ delocalized in the whole accessible space,
+whereas for $\omega < |\eps_p|$ the kernel contains an exponential damping factor and $f_p(\omega,\r)$ exhibit a bound-state behavior in the long range.   
 
 % \vspace{0.3cm}
 % \noindent{TODO: Add comment to support the localization below threshold}. Two possible way. First way, use the fact that the $\ket{f_p(0)}$ is the nothing but the $p$-\emph{th} 
@@ -238,34 +307,44 @@ the kernel contains an exponential damping factor and $f_p(\omega,\r)$ exhibit a
 % this way is better.
 % \vspace{0.3cm}
 
-The localization properties of fluctuation states allows us to assess the reliability of the linear response functional computed using the given basis set. Indeed, writing the response 
-density in terms of fluctuation states implies that 
-\be\lb{LinearResponseFunctDef2}
-\braket{\delta\op O}(\omega) = 2\sum_p \bra{\psi_p}\op O\ket{f_p(\omega)} \;,
-\ee
-so the computation of the linear response functional passes through the evaluation of the scalar products indicated in \eqref{LinearResponseFunctDef2}. We observe that there exists two 
-distinct regimes, on the basis of value of $\omega$. The first one, which we will refer to as the \emph{below threshold regime}, is realized when $\omega$ is lower than the ionization 
-potential $|\eps_h|$. In this case all the fluctuation states are below their threshold level and equation \eqref{LinearResponseFunctDef2} is expressed in terms of genuinely localized 
-quantities\footnote{This consideration holds for the class of observables for which $\bra{\psi_p}\op O$ is a localized state  with bound-state behavior in the long range}, each of which 
-possesses a physical cut-off radius. Due to this behavior we can affirm that given basis provides a reliable evaluation of \eqref{LinearResponseFunctDef2} if the chosen computational domain 
-is suitable to express the bound-state like fluctuation states, in a analogous fashion of a ground state calculation. 
+% The localization properties of fluctuation states allows us to assess the reliability of the linear response functional computed using the given basis set. Indeed, writing the response 
+% density in terms of fluctuation states implies that 
+% \be\lb{LinearResponseFunctDef2}
+% \braket{\delta\op O}(\omega) = 2\sum_p \bra{\psi_p}\op O\ket{f_p(\omega)} \;,
+% \ee
+% so the computation of the linear response functional passes through the evaluation of the scalar products indicated in \eqref{LinearResponseFunctDef2}. We observe that there exists two 
+% distinct regimes, on the basis of value of $\omega$. The first one, which we will refer to as the \emph{below threshold regime}, is realized when $\omega$ is lower than the ionization 
+% potential $|\eps_h|$. In this case all the fluctuation states are below their threshold level and equation \eqref{LinearResponseFunctDef2} is expressed in terms of genuinely localized 
+% quantities\footnote{This consideration holds for the class of observables for which $\bra{\psi_p}\op O$ is a localized state  with bound-state behavior in the long range}, each of which 
+% possesses a physical cut-off radius. Due to this behavior we can affirm that given basis provides a reliable evaluation of \eqref{LinearResponseFunctDef2} if the chosen computational domain 
+% is suitable to express the bound-state like fluctuation states, in a analogous fashion of a ground state calculation. 
+% 
+% On the contrary, the computation of the linear response functional can be much more demanding in the \emph{above threshold regime}, realized for $\omega>|\eps_h|$, in which fluctuation 
+% states start behaving as unbound wave functions. In this case a computational description of fluctuation states is only meaningful in weak sense, \emph{i.e} inside the scalar products of 
+% \eqref{LinearResponseFunctDef2}, where the bound state character of $\{\bra{\psi_p}\op O\}$ behave as a regulator. This observation indicates that, above threshold, a computational setup 
+% provides a reliable assessment of \eqref{LinearResponseFunctDef2} only if it is able to express an unbiased description of the fluctuation states in the support of $\{\bra{\psi_p}\op O\}$. 
+% 
+% As an explicit example in support of these arguments we compare the absorption spectrum of a $CO$ molecule computed in three distinct real-space basis set, which differs for the dimension of 
+% the computational domain. Results reported in figure \ref{co_spectrum} evidences that the curves are almost coincident in the below threshold regime, whereas the effect of the computational 
+% setup are clearly visible for values of $\omega$ that exceed the threshold value. 
+% 
+% % This fact implies that a computational setup has different chances of providing a reliable assessment of the linear response functional \eqref{LinearResponseFunctDef2} depending
+% % to the value of $\omega$. 
+% % This observation has relevant consequence on the capability of a computational setup to provide a reliable assessment of the linear response functional....  
+% 
+% \begin{figure}
+% \includegraphics[scale=0.56]{co_spectrum.eps}
+% \caption{\label{co_spectrum}(Color online) Convergence below threshold of the $CO$ spectrum computed in different computational setup.}
+% \end{figure}
 
-On the contrary, the computation of the linear response functional can be much more demanding in the \emph{above threshold regime}, realized for $\omega>|\eps_h|$, in which fluctuation 
-states start behaving as unbound wave functions. In this case a computational description of fluctuation states is only meaningful in weak sense, \emph{i.e} inside the scalar products of 
-\eqref{LinearResponseFunctDef2}, where the bound state character of $\{\bra{\psi_p}\op O\}$ behave as a regulator. This observation indicates that, above threshold, a computational setup 
-provides a reliable assessment of \eqref{LinearResponseFunctDef2} only if it is able to express an unbiased description of the fluctuation states in the support of $\{\bra{\psi_p}\op O\}$. 
-
-As an explicit example in support of these arguments we compare the absorption spectrum of a $CO$ molecule computed in three distinct real-space basis set, which differs for the dimension of 
-the computational domain. Results reported in figure \ref{co_spectrum} evidences that the curves are almost coincident in the below threshold regime, whereas the effect of the computational 
-setup are clearly visible for values of $\omega$ that exceed the threshold value. 
-
-% This fact implies that a computational setup has different chances of providing a reliable assessment of the linear response functional \eqref{LinearResponseFunctDef2} depending
-% to the value of $\omega$. 
-% This observation has relevant consequence on the capability of a computational setup to provide a reliable assessment of the linear response functional....  
+\vspace{0.3cm}
+TODO: identify fluctuation states at $\omega=0$ as the $\op Q_0$ projection of the KS occupied orbitals of the system with the static perturbation explicitly added to the unperturbed Hamiltonian.
+Evidence the localized character of $f_p(0,\r)$ through the convergence of the value of the statical polarizability w.r.t the dimension of the box. Comment the result of figure \ref{co_alphaStatic}.   
+Insert citation of \cite{mahan1980}. 
 
 \begin{figure}
-\includegraphics[scale=0.56]{co_spectrum.eps}
-\caption{\label{co_spectrum}(Color online) Convergence below threshold of the $CO$ spectrum computed in different computational setup.}
+\includegraphics[scale=0.56]{CO_alpha+D0_vsBoxSize.eps}
+\caption{\label{co_alphaStatic}(Color online) Convergence of the statical polarizability of the $CO$ with respect to the size of the computational domain.}
 \end{figure}
 
 \subsection{Excitation operators. The analytic structure of the susceptibility functional} %The spectrum of the Liouville superoperator
@@ -273,7 +352,7 @@ setup are clearly visible for values of $\omega$ that exceed the threshold value
 The study of the localization properties of the LR functional, formerly discussed through the inspection of the response density operator, can be reformulated in terms of the 
 \emph{susceptibility functional}, defined trough the operator equation  
 \be\lb{SusceptibilityDef1}
-\dm'(\omega) = \sop{{\cal R}}(\omega) \op\Phi(\omega) \;. 
+\dm'(\omega) = \sop{{\cal \chi}}(\omega) \op\Phi(\omega) \;. 
 \ee
 This alternative formulation of the problem has the advantage of providing general information on the nature of the excitation spectrum. Results achieved in this way thus describes an intrinsic 
 feature of the system under inspection and determine the properties of the LR independently from the specific choice of the perturbing field. 
@@ -281,12 +360,19 @@ feature of the system under inspection and determine the properties of the LR in
 The analysis is based on the spectral decomposition of the Liouville equation \eqref{LiouvillianRhopomegaDef1} and the make usage of the \emph{excitation operators}, defined through the 
 left and right action eigenvalue equations 
 \be\lb{ExcitationOperatorsDef1}
-\Liouv \op E = E \op E \qq \op{\tilde E} \Liouv = E \op{\tilde E} \;,
+\Liouv \op E_a = \Omega_a \op E_a \qq \op{\tilde E}_a \Liouv = \Omega_a \op{\tilde E}_a \;,
 \ee
 together with the operator orthonormalization condition %$\trace{\op{\tilde E}\op E'} = \delta(E-E')$. 
 \be\lb{orthoExcitatioOpDef1}
-\trace{\op{\tilde E}\op E'} = \delta(E-E')
+\trace{\op{\tilde E}_a\op E_b} = \delta_{ab}
 \ee
+The introduction of the excitation operators allows us to express the spectral decomposition of the resolvent of the Liouvillian so that:
+\be\lb{RhopExcitationDef1}
+\sop{{\cal \chi}}(\omega) \cdot   = \sum_a \op E_{a} \,
+\frac{\trace{\commutator{\dmnot}{\op{\tilde E}_a}\cdot}}{\omega-\Omega_a} \;.
+\ee 
+The analysis presented in this section aims to clarify the meaning of the formal sum over excitation expressed in \eqref{RhopExcitationDef1} (discrete sum? integral over a continuum?).   
+
 The properties of the Liouvillian superoperator (see appendix?) imply that excitations are transverse 
 operators so that $\op E = \dmnot\op E\op Q_0 + \op Q_0\op E\dmnot$. This condition allows us to introduce a dyadic representation of excitations as follows
 \begin{align}\lb{ExcitationOperatorsDef2}
@@ -388,17 +474,16 @@ The typical structure of the excitations landscape is depicted in figure \ref{Ex
 present. Conversely, in the intermediate energy interval that extends from $|\eps_h|$ to the absolute value of the deepest occupied orbital, the elements belonging to the discrete sector are embedded 
 in a continuum of delocalized excitations. Lastly, for energies higher than $|\eps_1|$ the excitations landscape takes contributions only from the delocalized sector. 
 
-The introduction of the excitation operators allows us to express the susceptibility functional \eqref{SusceptibilityDef1} through the spectral decomposition of the resolvent of the 
-Liouvillian. Pursuing this procedure provides:
-%The knowledge of the excitations spectrum allows us to expand the LR susceptibility in terms of excitations. Indeed we can make usage of the spectral decomposition of the resolvent
-%of the Liouvillian. This procedure allows us to formally solve the Liouville equation \eqref{LiouvillianRhopomegaDef1} and we have 
-\be\lb{RhopExcitationDef1}
-\sop{{\cal R}}(\omega) \cdot   =
-\left(\sum_E + \int\dd E   \right) \op E \,
-\frac{\trace{\commutator{\dmnot}{\op{\tilde E}}\cdot}}{\omega-E} \;,
-\ee 
-where we have explicitly separated the contributions of the localized and continuous excitations in the spectral decomposition \eqref{RhopExcitationDef1}. The elements of the first sector 
-correspond to \emph{true poles} of the susceptibility while the others can be interpreted only in terms of the spectral function. 
+% The introduction of the excitation operators allows us to express the susceptibility functional \eqref{SusceptibilityDef1} through the spectral decomposition of the resolvent of the 
+% Liouvillian. Pursuing this procedure provides:
+% \be\lb{RhopExcitationDef1}
+% \sop{{\cal R}}(\omega) \cdot   =
+% \left(\sum_E + \int\dd E   \right) \op E \,
+% \frac{\trace{\commutator{\dmnot}{\op{\tilde E}}\cdot}}{\omega-E} \;,
+% \ee 
+% where we have explicitly separated the contributions of the localized and continuous excitations in the spectral decomposition \eqref{RhopExcitationDef1}. 
+% The elements of the first sector 
+% correspond to \emph{true poles} of the susceptibility while the others can be interpreted only in terms of the spectral function. 
 
 Lastly, we establish a link between the fluctuation states and excitation operators based description of the LR. Indeed, thanks to the defining equation \eqref{SusceptibilityDef1} we can 
 easily express the excitations expansion of fluctuation states as follows 
@@ -430,7 +515,8 @@ below this energy threshold the continuum sector of the excitation spectrum is a
 % This relation clarifies the role of the excitations in the spectral decomposition. We know from the analysis of section \ref{FluctuationState} that fluctuation states are localized
 % up to $\omega=|\eps_h|$. 
 
-\section{Quality indicator for the numerical convergence of the LR}   %{Criterion for a reliable sampling of the excitation operators}
+%\section{Quality indicator for the numerical convergence of the LR}   %{Criterion for a reliable sampling of the excitation operators}
+\section{Criterion of computational reliability for the numerical convergence of the LR}
 
 From the theoretical analysis of the previous section we can made two statements:
 \begin{itemize}
@@ -457,6 +543,36 @@ SO TO SUMMARIZE: below the threshold the numerical convergence is regulated by t
 the $\mu$-basis by looking at the basis-independence of the fluctuation states at $\omega=0$. Above the threshold the convergence can be reached due to the localized nature of $\bra{\psi_p}\op O$, 
 in this case the computational setup provides reliable results if it guarantees the unbiased reconstruction of fluctuation states in the support of $\bra{\psi_p}\op O$. In this range there is no a 
 priori indicator of the goodness of the results. 
+
+\subsection{Strong and weak convergence}
+
+The localization properties of fluctuation states allows us to assess the reliability of the linear response functional computed using the given basis set. Indeed, writing the response 
+density in terms of fluctuation states implies that 
+\be\lb{LinearResponseFunctDef2}
+\braket{\delta\op O}(\omega) = 2\sum_p \bra{\psi_p}\op O\ket{f_p(\omega)} \;,
+\ee
+so the computation of the linear response functional passes through the evaluation of the scalar products indicated in \eqref{LinearResponseFunctDef2}. We observe that there exists two 
+distinct regimes, on the basis of value of $\omega$. The first one, which we will refer to as the \emph{below threshold regime}, is realized when $\omega$ is lower than the ionization 
+potential $|\eps_h|$. In this case all the fluctuation states are below their threshold level and equation \eqref{LinearResponseFunctDef2} is expressed in terms of genuinely localized 
+quantities\footnote{This consideration holds for the class of observables for which $\bra{\psi_p}\op O$ is a localized state  with bound-state behavior in the long range}, each of which 
+possesses a physical cut-off radius. Due to this behavior we can affirm that given basis provides a reliable evaluation of \eqref{LinearResponseFunctDef2} if the chosen computational domain 
+is suitable to express the bound-state like fluctuation states, in a analogous fashion of a ground state calculation. 
+
+On the contrary, the computation of the linear response functional can be much more demanding in the \emph{above threshold regime}, realized for $\omega>|\eps_h|$, in which fluctuation 
+states start behaving as unbound wave functions. In this case a computational description of fluctuation states is only meaningful in weak sense, \emph{i.e} inside the scalar products of 
+\eqref{LinearResponseFunctDef2}, where the bound state character of $\{\bra{\psi_p}\op O\}$ behave as a regulator. This observation indicates that, above threshold, a computational setup 
+provides a reliable assessment of \eqref{LinearResponseFunctDef2} only if it is able to express an unbiased description of the fluctuation states in the support of $\{\bra{\psi_p}\op O\}$. 
+
+As an explicit example in support of these arguments we compare the absorption spectrum of a $CO$ molecule computed in three distinct real-space basis set, which differs for the dimension of 
+the computational domain. Results reported in figure \ref{co_spectrum} evidences that the curves are almost coincident in the below threshold regime, whereas the effect of the computational 
+setup are clearly visible for values of $\omega$ that exceed the threshold value. 
+
+\begin{figure}
+\includegraphics[scale=0.56]{co_spectrum.eps}
+\caption{\label{co_spectrum}(Color online) Convergence below threshold of the $CO$ spectrum computed in different computational setup.}
+\end{figure}
+
+
 
 %\vspace{0.3cm}
 \subsection{Choice of the $\alpha$-basis. Statical polarizability-driven criterion revised}
