--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -208,8 +208,8 @@ As a preliminary step for the forthcoming discussion we present a simple argumen
 $\op H\ket{\psi}=\eps\ket{\psi}$. The main aims of this analysis, apart from reproducing the well known behavior of the wave functions, is to introduce some tools and setting up notations and 
 terminology that will we widely used in the rest of the paper. 
 
-We procede by splitting the Hamiltonian as the sum of the kinetic $\op T$ and potential $\op V$ term. Since we are dealing with molecular-like systems $\op V$ has a compact support when projected in the 
-$\r$-representation. We can formally solve the SE as an inhomogeneous Helmholtz equation by writing
+The argument procedes by splitting the Hamiltonian as the sum of the kinetic $\op T$ and potential $\op V$ term. Since we are dealing with molecular-like systems $\op V$ has a compact support when 
+projected in the $\r$-representation. We can formally solve the SE as an inhomogeneous Helmholtz equation by writing
 \be\lb{SEHelmholtz1}
 \ket{\psi} = \op G_H(\eps)\ket{\op V\psi}\;,
 \ee
@@ -368,56 +368,48 @@ together with the operator orthonormalization condition %$\trace{\op{\tilde E}\o
 \ee
 The introduction of the excitation operators allows us to express the spectral decomposition of the resolvent of the Liouvillian so that:
 \be\lb{RhopExcitationDef1}
-\sop{{\cal \chi}}(\omega) \cdot   = \sum_a \op E_{a} \,
+\sop{{\cal \chi}}(\omega) \cdot   = \sum_{\{a\}} \op E_{a} \,
 \frac{\trace{\commutator{\dmnot}{\op{\tilde E}_a}\cdot}}{\omega-\Omega_a} \;.
 \ee 
 The analysis presented in this section aims to clarify the meaning of the formal sum over excitation expressed in \eqref{RhopExcitationDef1} (discrete sum? integral over a continuum?).   
 
 The properties of the Liouvillian superoperator (see appendix?) imply that excitations are transverse 
-operators so that $\op E = \dmnot\op E\op Q_0 + \op Q_0\op E\dmnot$. This condition allows us to introduce a dyadic representation of excitations as follows
+operators so that $\op E_a = \dmnot\op E_a\op Q_0 + \op Q_0\op E_a\dmnot$. This condition allows us to introduce a dyadic representation of excitations as follows
 \begin{align}\lb{ExcitationOperatorsDef2}
-\op E &= \sum_p \left( \ket{\phi^E_p}\bra{\psi_p} + \ket{\psi_p} \bra{\tilde\chi^E_p}\right)\;, \nn \\
-\op{\tilde E} &= \sum_p \left( \ket{\chi^E_p}\bra{\psi_p} + \ket{\psi_p} \bra{\tilde\phi^E_p}\right)\;,
+\op E_a &= \sum_p \left( \ket{\phi^a_p}\bra{\psi_p} + \ket{\psi_p} \bra{\chi^a_p}\right)\;, \nn \\
+\op{\tilde E}_a = \commutator{\dmnot}{\op E^t_a} &= \sum_p \left( \ket{\psi_p}\bra{\phi^a_p} - \ket{\chi^a_p} \bra{\psi_p}\right)\;,
 \end{align}
-where both the \emph{excited states} $\ket{\phi^E_p}$, $\bra{\tilde\chi^E_p}$ and their conjugates span the empty subspace of $\hnot$. 
+where the \emph{excited states} $\ket{\phi^E_p}$, $\bra{\chi^E_p}$ span the empty subspace of $\hnot$. 
 
 We restrict our analysis assuming that a set of hypothesis commonly realized in DFT holds (symmetry of the transition basis, specify better? see appendix?). Equations 
-\eqref{ExcitationOperatorsDef1} can be recasted in the form of a Sternheimer-like equations for the excited states. In particular, the left action eigenvalues equations provide   
+\eqref{ExcitationOperatorsDef1} can be recasted in the form of a Sternheimer-like equations for the excited states, that is   
 \begin{align}\lb{ExcitationOperatorsDef3}
-&\left[E-(\hnot - \eps_p)\right] \ket{\phi_p^E} = \op Q_0 \op V'[\op E] \ket{\psi_p} \;, \nn\\
-&\left[-E-(\hnot - \eps_p)\right]\ket{\tilde\chi_p^E} = \op Q_0\op V'[\op E^t]\ket{\psi_p}  \;, 
+&\left[\Omega_a-(\hnot - \eps_p)\right] \ket{\phi_p^a} = \op Q_0 \op V'[\op E_a] \ket{\psi_p} \;, \nn\\
+&\left[-\Omega_a-(\hnot - \eps_p)\right]\ket{\chi_p^a} = \op Q_0\op V'[\op E^t_a]\ket{\psi_p}  \;, 
 \end{align}
 and the orthonormalization condition \eqref{orthoExcitatioOpDef1} implies %among the excitation operators is expressed as 
 \be\lb{ExcitedStateOrthNormDef1}
-\sum_p \left(\brket{\tilde\phi_p^E}{\phi_p^{E'}} + \brket{\tilde\chi_p^{E'}}{\chi_p^E}\right) = \delta(E-E') \;. 
+\sum_p \left(\brket{\phi_p^a}{\phi_p^b} - \brket{\chi_p^b}{\chi_p^a}\right) = \delta_{ab} \;. 
 \ee
 Equations \eqref{ExcitationOperatorsDef3} allows us to present a localization argument for the excited states using the same procedure adopted for fluctuation states in 
 section \ref{FluctuationState}. Pursing this strategy we present a formal solution of \eqref{ExcitationOperatorsDef3} as follows 
 \begin{align}
-&\ket{\phi^E_p} = \op G_H(E+\eps_p)\ket{s_{\phi}} \;, \nn \\
-&\ket{\tilde\chi^E_p} = \op G_H(-E+\eps_p)\ket{s_{\tilde\chi}} \;,
+&\ket{\phi^a_p} = \op G_H(\Omega_a+\eps_p)\ket{s_{\phi}} \;, \nn \\
+&\ket{\chi^a_p} = \op G_H(-\Omega_a+\eps_p)\ket{s_{\chi}} \;,
 \end{align}
-where $\op G_H$ is the Helmholtz Green function, while the (self-consistent) source term $s_\phi$ and $s_{\tilde\chi}$ collect the sum of the r.h.s of \eqref{ExcitationOperatorsDef3} 
+where $\op G_H$ is the Helmholtz Green function, while the (self-consistent) source term $s_\phi$ and $s_{\chi}$ collect the sum of the r.h.s of \eqref{ExcitationOperatorsDef3} 
 plus the action of the KS potential on the excited states. 
 
-It is possible to show that excitation eigenvalues come in pair and we focus our analysis on solutions with positive energy, \emph{i.e.} with $E>0$. Looking at the coordinate representation 
-of $\op G_H$ (see eq. \eqref{HelmholtzKernelDef1}) we observe that the Helmholtz kernel evaluated in $-E+\eps_p$ contains an exponential damping factor for \emph{all} the positive values of $E$. 
-As a consequence all the $\ket{\tilde\chi^E_p}$ states exhibit a bound-state behavior in the long range. Instead, the asymptotic character of $\op G_H(E+\eps_p)$ depends from $E$ and we can 
-identify the threshold value $E=|\eps_p|$ in terms of which $\ket{\phi^E_p}$ changes from a bound-state like behavior to a delocalized spherical-wave like character.  
+It is possible to show that excitation eigenvalues come in pair and we focus our analysis on solutions with positive energy, \emph{i.e.} with $\Omega_a>0$. Looking at the coordinate representation 
+of $\op G_H$ (see eq. \eqref{HelmholtzKernelDef1}) we observe that the Helmholtz kernel evaluated in $-\Omega_a+\eps_p$ contains an exponential damping factor for \emph{all} the positive values of 
+$\Omega_a$. As a consequence all the $\ket{\chi^a_p}$ states exhibit a bound-state behavior in the long range. Instead, the asymptotic character of $\op G_H(\Omega_a+\eps_p)$ depends from $\Omega_a$ 
+and we can identify the threshold value $\Omega_a=|\eps_p|$ in terms of which $\ket{\phi^a_p}$ changes from a bound-state like behavior to a delocalized spherical-wave like character.  
 Furthermore, the orthonormalization conditions \eqref{ExcitedStateOrthNormDef1} act as a ulterior constraint for the bound-state solutions and have the effect of determining the quantization of 
-the corresponding energy levels \footnote{Sternheimer equations represent the first order expansion of a set of Hamiltonian eigenvalue equations. Consequently the properties of their solution...}.
-We conclude that all the states $\ket{\tilde\chi^E_p}$ and the $\ket{\phi^E_p}$ with $E$ below the threshold value constitute a genuine \emph{discrete} set, while the ones in the unbound 
-energy range behaves as generalized eigenvectors associated to a continuum spectrum. 
-
-The structure of the excitation spectrum follows from the properties of the excited states described above. To clarify this point we consider a value of $E$ that satisfies equations
-\eqref{ExcitationOperatorsDef1}. In correspondence of this values equations \eqref{ExcitationOperatorsDef3} possess a solution in which \emph{at least} one of the excited states 
-is not zero. We denote with $p=p_m$ the label of the $\ket{\phi^E_p}$  with the highest value of $|\eps_p|$, among the ones that contribute to \eqref{ExcitationOperatorsDef2}. From the previous 
-considerations it emerge that if $E<|\eps_{p_m}|$ \emph{all} the excited states in the dyadic representation of the excitation operator possess a bound-state like behavior. Excitations 
-of this type thus represent localized quantities and the associated eigenvalue are discrete. On the contrary, for $E>|\eps_{p_m}|$ some (or all) of the excited states in the dyadic representation
-of the excitation behave as generalized eigenvectors and the corresponding eigenvalue belong to a continuum of accessible values.
+the corresponding energy levels. We conclude that all the states $\ket{\chi^a_p}$ and the $\ket{\phi^a_p}$ with $\Omega_a$ below the threshold value constitute a genuine \emph{discrete} set, while 
+the ones in the unbound energy range behaves as generalized eigenvectors associated to a continuum spectrum. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{figure}[t]
+\begin{figure}[!t]
 \begin{tikzpicture}[scale=0.78]
 % axes
 \draw[->] (0,0) -- (8,0); 
@@ -461,19 +453,32 @@ excitations whereas the tick black lines describe delocalized excitation with a 
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-This analysis reveals that the excitations spectrum is composed by two distinct sectors. The first one is realized by the (finite) set of localized excitations with discrete eigenvalues. Extending 
-the results achieved in \cite{boffi2016} for the KS virtual orbitals, to the equations for excited states \eqref{ExcitationOperatorsDef3}, we conclude that localized excitations behave as 
-\emph{observable} quantities and the associated energies possess an absolute meaning, which should not depend from the computational setup used for their representation. 
+The structure of the excitation spectrum follows from the properties of the excited states described above. To clarify this point we consider a value of $\Omega_a$ that satisfies equations
+\eqref{ExcitationOperatorsDef1}. In correspondence of this values equations \eqref{ExcitationOperatorsDef3} possess a solution in which \emph{at least} one of the excited states 
+is not zero. We denote with $p=p_m$ the label of the $\ket{\phi^a_p}$  with the highest value of $|\eps_p|$, among the ones that contribute to \eqref{ExcitationOperatorsDef2}. From the previous 
+considerations it emerge that if $\Omega_a<|\eps_{p_m}|$ \emph{all} the excited states in the dyadic representation of the excitation operator possess a bound-state like behavior. Excitations 
+of this type thus represent localized quantities and the associated eigenvalue are discrete. On the contrary, for $\Omega_a>|\eps_{p_m}|$ some (or all) of the excited states in the dyadic representation
+of the excitation behave as generalized eigenvectors and the corresponding eigenvalue belong to a continuum of accessible values.
 
-Instead, the second sector contains the dense set of delocalized excitations with an associated continuum spectrum. These excitations behave as the unbound virtual orbitals analyzed in \cite{boffi2016} 
-and are deeply affected by the computational setup used to represent them. In particular, the presence of a finite computational domain implies a fictitious discretization of the excitation levels and 
-the associated spectrum exhibit an explicit dependence from the size of the domain. Excitations belonging to this sector thus lose their intrinsic physical meaning and have to be understood as a tool to 
-express the spectral decomposition of the Liouvillian superoperator. 
+% This analysis reveals that the excitations spectrum is composed by two distinct sectors. The first one is realized by the (finite) set of localized excitations with discrete eigenvalues. Extending 
+% the results achieved in \cite{boffi2016} for the KS virtual orbitals, to the equations for excited states \eqref{ExcitationOperatorsDef3}, we conclude that localized excitations behave as 
+% \emph{observable} quantities and the associated energies possess an absolute meaning, which should not depend from the computational setup used for their representation. 
+% 
+% Instead, the second sector contains the dense set of delocalized excitations with an associated continuum spectrum. These excitations behave as the unbound virtual orbitals analyzed in \cite{boffi2016} 
+% and are deeply affected by the computational setup used to represent them. In particular, the presence of a finite computational domain implies a fictitious discretization of the excitation levels and 
+% the associated spectrum exhibit an explicit dependence from the size of the domain. Excitations belonging to this sector thus lose their intrinsic physical meaning and have to be understood as a tool to 
+% express the spectral decomposition of the Liouvillian superoperator. 
 
 The typical structure of the excitations landscape is depicted in figure \ref{ExcitationLandscape}. The plot evidences that below the first ionization energy $|\eps_h|$ only localized excitations are 
 present. Conversely, in the intermediate energy interval that extends from $|\eps_h|$ to the absolute value of the deepest occupied orbital, the elements belonging to the discrete sector are embedded 
 in a continuum of delocalized excitations. Lastly, for energies higher than $|\eps_1|$ the excitations landscape takes contributions only from the delocalized sector. 
 
+Susceptibility written as
+\be\lb{RhopExcitationDef2}
+\sop{{\cal \chi}}(\omega) \cdot   = \left(\sum_a + \int\dd a   \right) \op W_{a} \,
+\frac{2\trace{\op W_a \cdot}}{\omega^2-\Omega_a^2} \;,
+\ee 
+with $\op W_a = \frac{1}{\sqrt{2}}(\op E_a + \op E_a^t)$. 
 % The introduction of the excitation operators allows us to express the susceptibility functional \eqref{SusceptibilityDef1} through the spectral decomposition of the resolvent of the 
 % Liouvillian. Pursuing this procedure provides:
 % \be\lb{RhopExcitationDef1}
@@ -485,18 +490,18 @@ in a continuum of delocalized excitations. Lastly, for energies higher than $|\e
 % The elements of the first sector 
 % correspond to \emph{true poles} of the susceptibility while the others can be interpreted only in terms of the spectral function. 
 
-Lastly, we establish a link between the fluctuation states and excitation operators based description of the LR. Indeed, thanks to the defining equation \eqref{SusceptibilityDef1} we can 
-easily express the excitations expansion of fluctuation states as follows 
-\be\lb{FluctuationStateExcitationDef1}
-\ket{f_p(\omega)}   =
-\left(\sum_E + \int\dd E   \right) 
-%\frac{\trace{\commutator{\dmnot}{\op{\tilde E}}\op\Phi(\omega)}}{\omega-E} \ket{\phi^E_p} \;. \nn
-\frac{t_\Phi(E)}{\omega-E} \ket{\phi^E_p} \;,
-\ee 
-with $t_\Phi(E)=\trace{\commutator{\dmnot}{\op{\tilde E}}\op\Phi(\omega)}$. 
-%This formula shows that, for each value of $\omega$, both the sectors of the excitations spectrum contribute to the fluctuation state. 
-Thanks to the analysis presented in section \ref{FluctuationState} we know that fluctuation states possess a localized behavior up to $\omega=|\eps_h|$, so we conclude that 
-below this energy threshold the continuum sector of the excitation spectrum is able to resum in a localized way.  
+% Lastly, we establish a link between the fluctuation states and excitation operators based description of the LR. Indeed, thanks to the defining equation \eqref{SusceptibilityDef1} we can 
+% easily express the excitations expansion of fluctuation states as follows 
+% \be\lb{FluctuationStateExcitationDef1}
+% \ket{f_p(\omega)}   =
+% \left(\sum_E + \int\dd E   \right) 
+% %\frac{\trace{\commutator{\dmnot}{\op{\tilde E}}\op\Phi(\omega)}}{\omega-E} \ket{\phi^E_p} \;. \nn
+% \frac{t_\Phi(E)}{\omega-E} \ket{\phi^E_p} \;,
+% \ee 
+% with $t_\Phi(E)=\trace{\commutator{\dmnot}{\op{\tilde E}}\op\Phi(\omega)}$. 
+% %This formula shows that, for each value of $\omega$, both the sectors of the excitations spectrum contribute to the fluctuation state. 
+% Thanks to the analysis presented in section \ref{FluctuationState} we know that fluctuation states possess a localized behavior up to $\omega=|\eps_h|$, so we conclude that 
+% below this energy threshold the continuum sector of the excitation spectrum is able to resum in a localized way.  
 
 
 %Excitations behave as singularity of the susceptibility operator and their knowledge provides a deeper insight into the analytic structure of the linear response. 
@@ -572,19 +577,40 @@ setup are clearly visible for values of $\omega$ that exceed the threshold value
 \caption{\label{co_spectrum}(Color online) Convergence below threshold of the $CO$ spectrum computed in different computational setup.}
 \end{figure}
 
+\subsection{Stability and convergence of the excitation spectrum}
+
+This analysis reveals that the excitations spectrum is composed by two distinct sectors. The first one is realized by the (finite) set of localized excitations with discrete eigenvalues. Extending 
+the results achieved in \cite{boffi2016} for the KS virtual orbitals, to the equations for excited states \eqref{ExcitationOperatorsDef3}, we conclude that localized excitations behave as 
+\emph{observable} quantities and the associated energies possess an absolute meaning, which should not depend from the computational setup used for their representation. 
+
+Instead, the second sector contains the dense set of delocalized excitations with an associated continuum spectrum. These excitations behave as the unbound virtual orbitals analyzed in \cite{boffi2016} 
+and are deeply affected by the computational setup used to represent them. In particular, the presence of a finite computational domain implies a fictitious discretization of the excitation levels and 
+the associated spectrum exhibit an explicit dependence from the size of the domain. Excitations belonging to this sector thus lose their intrinsic physical meaning and have to be understood as a tool to 
+express the spectral decomposition of the Liouvillian superoperator. 
+
+\begin{figure}[ht]
+\includegraphics[scale=0.24]{CO_exc.eps}
+\caption{(Color online) Excitation spectrum of $CO$. The two curves correspond to two computational domain of different sizes. The inset contains the sole contribution of localized excitations.}
+\label{CO_exc}
+\end{figure}
+
+\begin{figure}[ht]
+\includegraphics[scale=0.24]{C6H6_exc.eps}
+\caption{(Color online) Excitation spectrum of $C_6H_6$. The two curves correspond to two computational domain of different sizes. The inset contains the sole contribution of localized excitations.}
+\label{C6H6_exc}
+\end{figure}
 
 
-%\vspace{0.3cm}
-\subsection{Choice of the $\alpha$-basis. Statical polarizability-driven criterion revised}
-
-The previous considerations regard the relation between the localization properties of the fluctuation states and the possibility of having a quality indicator for the goodness of the $\mu$-basis. 
-Now we aim to extend/reformulate the question of the numerical convergence to the case in which the excitation-based representation of the LR is adopted.
-
-The construction of the excitation operators requires the explicit sampling of the empty state subspace. We introduce the notion of \emph{$\{\alpha\}$-basis}: choose the empty eigenstates of the KS 
-Hamiltonian as a basis-set to express the excited state $\ket{\phi^E_p},\bra{\tilde\chi^E_p}$ and their duals. Excitations are written in the basis of transitions.  
-
-COMMENT: The elements of the $\{\alpha\}$-basis are written in the (finite dimensional) $\{\mu\}$-basis. It follows that the $\{\alpha\}$-basis is finite dimensional too and has $n_\mu-n_{occ}$ degrees
-of freedom. Excitation index becomes discrete and the basis provide a partial sampling of the continuum sector of the excitation landscape.    
+% \subsection{Choice of the $\alpha$-basis. Statical polarizability-driven criterion revised}
+% 
+% The previous considerations regard the relation between the localization properties of the fluctuation states and the possibility of having a quality indicator for the goodness of the $\mu$-basis. 
+% Now we aim to extend/reformulate the question of the numerical convergence to the case in which the excitation-based representation of the LR is adopted.
+% 
+% The construction of the excitation operators requires the explicit sampling of the empty state subspace. We introduce the notion of \emph{$\{\alpha\}$-basis}: choose the empty eigenstates of the KS 
+% Hamiltonian as a basis-set to express the excited state $\ket{\phi^E_p},\bra{\tilde\chi^E_p}$ and their duals. Excitations are written in the basis of transitions.  
+% 
+% COMMENT: The elements of the $\{\alpha\}$-basis are written in the (finite dimensional) $\{\mu\}$-basis. It follows that the $\{\alpha\}$-basis is finite dimensional too and has $n_\mu-n_{occ}$ degrees
+% of freedom. Excitation index becomes discrete and the basis provide a partial sampling of the continuum sector of the excitation landscape.    
 
 
 
@@ -592,7 +618,7 @@ of freedom. Excitation index becomes discrete and the basis provide a partial sa
 % difference method. Remark the importance of using a systematic basis, only in this way the convergence of the statical polarizability turns out to be a meaningful criterion for the evaluation 
 % of the basis that sample the empty state space. Refer to the paper of....
 
-\subsection{Results for the benzene molecule}
+%\subsection{Results for the benzene molecule}
 
 \begin{figure}[ht]
 \includegraphics[scale=0.56]{c6h6_excitationLandscape.eps}
